Fixes horizontal scroll bar appearing in tablet version
Fixes top parts of section hidden under header

Fixes autofill background and text color mismatch when using Chrome Navigator

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  scroll-margin-top: 8rem;
   background-color: #1b1a17;
   font-family: 'Inconsolata', monospace;
   scroll-behavior: smooth;
@@ -17,6 +18,7 @@ header {
   padding-top: 1em;
   top: 0;
   left: 0;
+  width: 100%;
 }
 
 body {
@@ -238,11 +240,19 @@ textarea {
   resize: none;
 }
 
+/* Changes preset autofill background color and matches it with website design */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-text-fill-color: #f0e3ca;
+    transition: background-color  5000s ease-in-out 0s;
+}
+
 @media screen and (min-width: 501px) {
   header {
     display: grid;
     grid-template-columns: auto;
-    width: 100vw;
   }
 
   .logoContainer {
@@ -375,8 +385,8 @@ textarea {
   }
 
   .socialNetworks > div {
-    width: 16em;
-    margin: 0 auto;
+    width: auto;
+    margin-left: 5px;
   }
 }
 
